@@ -1,3 +1,8 @@
+2007-01-17 Nick Schermer
+
+	* Remove the xfce_framebox code and replace it with gtk_notebook.
+	* Bump version for release.
+
 2007-01-09 Nick Schermer
 
 	* Fix build problems with -as-needed (Bug 2461)
